kubernetes/main/apps/observability/crucix/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app crucix
  namespace: observability
  labels:
    app: crucix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crucix
  template:
    metadata:
      labels:
        app: crucix
    spec:
      containers:
        - name: crucix
          image: ghcr.io/calesthio/crucix:2d040cb
          ports:
            - name: web
              containerPort: 3117
          imagePullPolicy: Always
          resources:
            limits:
              memory: 500Mi
              cpu: 100m
            requests:
              cpu: 10m
              memory: 256Mi
          volumeMounts:
            - name: runs
              mountPath: /app/runs
      volumes:
        - name: runs
          persistentVolumeClaim:
            claimName: crucix-runs
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
