kubernetes/main/apps/observability/crucix/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app crucix-ingress
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: crucix.${SECRET_EXTERNAL_DOMAIN}
spec:
  ingressClassName: external
  rules:
  - host: crucix.${SECRET_EXTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: crucix
            port:
              number: 3117
        path: /
        pathType: Prefix
